# therapy-agent

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  brd4780_umod.yaml  ekterly_serping1.yaml  run_benchmarks.py
benchmarks/adversarial/: README.md  cascade_disambiguation_hae.yaml  confounded_disease_gene.yaml  field_rationale_decoupling.yaml  multi_target_no_lazy_pick.yaml  paralog_confusion_dmd_utrn.yaml  paralog_vs_repressor_scd.yaml  wrong_axis_cah.yaml
benchmarks/cases/: als_sod1.yaml  dmd_exon51.yaml  fabry_gla.yaml  fh_pcsk9.yaml  her2_breast_cancer.yaml  melanoma_braf.yaml  migraine_cgrp.yaml  nsclc_egfr.yaml  obesity_pomc.yaml  pnh_piga.yaml  porphyria_alas1.yaml  ra_tnf.yaml  scd_hbb.yaml  sma_smn1.yaml
benchmarks/heldout_2024_2025/: aprocitentan_htn.yaml  capivasertib_breast.yaml  cobenfy_schizophrenia.yaml  crinecerfont_cah.yaml  donanemab_alzheimers.yaml  garadacimab_hae.yaml  iptacopan_pnh.yaml  lebrikizumab_atopic_derm.yaml  mavorixafor_whim.yaml  resmetirom_mash.yaml  sotatercept_pah.yaml  vorasidenib_glioma.yaml
cookbook/: adtkd_case.py  hae_case.py
docs/: DEMO.md
notebooks/: 01_walkthrough.ipynb
src/therapy_agent/: cli.py  config.py  graph.py  llm.py  state.py
src/therapy_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/therapy_agent/benchmarks/: loader.py
src/therapy_agent/nodes/: agentic_target_research.py  druggable_target_search.py  field_rationale_align.py  interactor_biology_lookup.py  (+6 more)
tests/: conftest.py  test_nodes.py  test_strategy_guards.py  test_tools.py
(+15 files in other folders)
