[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "therapy-agent"
version = "0.1.0"
description = "LangGraph AI agent for hypothesizing therapeutic strategies from genetic variants"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Amit Shenoy", email = "shenoy.am@husky.neu.edu" }]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
    "g2p-rag>=0.1.0",
    "fda-strategy-triples>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ipykernel>=6.29",
    "nbformat>=5.10",
]

[project.scripts]
therapy-agent = "therapy_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
g2p-rag = { path = "../g2p-rag", editable = true }
fda-strategy-triples = { path = "../fda-strategy-triples", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
